--- a/pkgdepdb.1.in
+++ b/pkgdepdb.1.in
@@ -244,6 +244,10 @@ verbosity = 1
 quiet = true
 # or:
 # quiet = false
+# read package 'depend' and 'optdepend' entries from .PKGINFO
+# and use them if they are present in the database
+package_depends = true
+# or false
 .Ed
 .Pp
 .Em NOTE Ns :
