--- a/pkgdepdb.1.in
+++ b/pkgdepdb.1.in
@@ -44,6 +44,10 @@ database.
 Delete mode: delete (uninstall) the listed packages from the database.
 In this mode, the non-option parameters are package names, not package
 archive files!
+.It Fl -wipe
+Wipe database: remove all packages, but keep settings and rules.
+Useful to clean up and start over without having to re-add all the
+library paths and rules.
 .It Fl n , Fl -rename= Ns Ar name
 Change the database's contained name. This does not affect the
 filename. The database-name is currently not used anywhere except when
