--- a/pkgdepdb.1.in
+++ b/pkgdepdb.1.in
@@ -52,6 +52,12 @@ library paths and rules.
 Change the database's contained name. This does not affect the
 filename. The database-name is currently not used anywhere except when
 using the -I option to show it.
+.It Fl -integrity
+Perform a dependency integrity check: Look for orphaned object files
+in the database. Look for missing dependencies of packages, and go
+through all packages and see if it misses dependencies (considering
+it, its dependencies, optional dependencies, and the base packages to
+be installed).
 .It Fl -dry
 Dry run: do not commit the changes to the database file.
 .It Fl v , Fl -verbose
