--- a/pkgdepdb.1.in
+++ b/pkgdepdb.1.in
@@ -50,6 +50,11 @@ archive files!
 Wipe database: remove all packages, but keep settings and rules.
 Useful to clean up and start over without having to re-add all the
 library paths and rules.
+.It Fl -touch
+Touch the database: re-write out the database even if no modifications
+are made. This can be used to bring the database format version up to
+version 8 or newer. Starting with version 8 object and package references
+are stored more efficiently.
 .It Fl -rm-files
 Strip the database of its file-list. Causes the database to be stored
 as if it was created with \(dqfile_lists=off\(dq / \(dq--files=off\(dq.
