pkgdepdb namespace, Config class, split giant main.h into several headers, cleanup

--- a/Makefile.pre
+++ b/Makefile.pre
@@ -9,3 +9,5 @@ CLANG_FLAGS := -Weverything \
                -Wno-sign-conversion \
                -Werror
 
+ENABLE_THREADS := undef
+ENABLE_ALPM := undef
