--- a/config.h.in
+++ b/config.h.in
@@ -15,4 +15,7 @@
   PKGDEPDB_STRINGIFY_(PKGDEPDB_V_MINOR) "." \
   PKGDEPDB_STRINGIFY_(PKGDEPDB_V_PATCH) @@GIT_INFO@@
 
+#@@ENABLE_THREADS@@ PKGDEPDB_ENABLE_THREADS
+#@@ENABLE_ALPM@@    PKGDEPDB_WITH_ALPM
+
 #endif
