--- a/config.h.in
+++ b/config.h.in
@@ -16,6 +16,7 @@
   PKGDEPDB_STRINGIFY_(PKGDEPDB_V_PATCH) @@GIT_INFO@@
 
 #@@ENABLE_THREADS@@ PKGDEPDB_ENABLE_THREADS
-#@@ENABLE_ALPM@@    PKGDEPDB_WITH_ALPM
+#@@ENABLE_ALPM@@ PKGDEPDB_ENABLE_ALPM
+#@@ENABLE_REGEX@@ PKGDEPDB_ENABLE_REGEX
 
 #endif
