pkgdepdb.h will contain the C interface; added prototypes;; WITH_LIBRARY=yes will now build a library which will implement the public API from pkgdepdb.h

--- a/Makefile.pre
+++ b/Makefile.pre
@@ -12,7 +12,11 @@ CLANG_FLAGS := -Weverything \
 ALPM ?= no
 REGEX ?= no
 THREADS ?= no
+WITH_LIBRARY ?= no
+LIBTOOL ?= libtool
 ENABLE_THREADS := undef
 ENABLE_ALPM := undef
 ENABLE_REGEX := undef
 GIT_INFO ?=
+LIB_SHARED_SUFFIX := .so
+LIB_STATIC_SUFFIX := .a
