setup.py.in and setup.py make target, and some .gitignore updates

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,16 @@
 .libs
 
 pkgdepdb
+pkgdepdb.1
 config.h
+setup.py
 
 .localflags
 .cflags
 send.sh
 *.gz
+
+tests/ca_db
+tests/ca_elf
+tests/ca_package
+tests/ca_config
