fix version string
obviously no one ever checks it

--- a/config.h.in
+++ b/config.h.in
@@ -11,9 +11,8 @@
 #define PKGDEPDB_STRINGIFY(x) PKGDEPDB_STRINGIFY_(x)
 
 #define PKGDEPDB_VERSION_STRING \
-  PKGDEPDB_STRINGIFY_(PKGDEPDB_V_MAJOR) "." \
-  PKGDEPDB_STRINGIFY_(PKGDEPDB_V_MINOR) "." \
-  PKGDEPDB_STRINGIFY_(PKGDEPDB_V_PATCH) @@GIT_INFO@@
+  "@@V_MAJOR@@.@@V_MINOR@@.@@V_PATCH@@"
+#define PKGDEPDB_GIT_INFO @@GIT_INFO@@
 
 #@@ENABLE_THREADS@@ PKGDEPDB_ENABLE_THREADS
 #@@ENABLE_ALPM@@ PKGDEPDB_ENABLE_ALPM
